k3s/kustomize/bases/it-tools/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`it-tools.staging.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: it-tools
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-hejsan-xyz-tls
